--- a/unit_3/style.css
+++ b/unit_3/style.css
@@ -1,10 +1,10 @@
 body {
-	font-family: Arial, san-serif;
 	text-align: center;
-	background: url("https://imgur.com/a/rlbBL");
+	background: url("https://i.imgur.com/lEC1gBQ.jpg");
 	background-size: cover;
+	font-family: Gotham, san-serif;
 }
 h1 {
-	background: #000;
-	color: #fff; 
+	background: black;
+	color: white; 
 }
