css- background image
one more try

--- a/unit_3/style.css
+++ b/unit_3/style.css
@@ -1,6 +1,6 @@
 body {
 	text-align: center;
-	background: url("https://i.imgur.com/lEC1gBQ.jpg");
+	background-image: url("https://i.imgur.com/lEC1gBQ.jpg");
 	background-size: cover;
 	font-family: Gotham, san-serif;
 }
