--- a/unit_3/style.css
+++ b/unit_3/style.css
@@ -1,6 +1,10 @@
 body {
 	text-align: center;
-	background-color: black;
-	color: white;
+	background-image: url("https://i.imgur.com/lEC1gBQ.jpg");
+	background-size: cover;
 	font-family: Gotham, san-serif;
+}
+h1 {
+	background-color: #000;
+	color: #fff;
 }
