--- a/unit_3/style.css
+++ b/unit_3/style.css
@@ -3,16 +3,20 @@ body {
 	background-image: url("https://i.imgur.com/lEC1gBQ.jpg");
 	background-size: cover;
 	font-family: Gotham, san-serif;
+	color: white;
 }
 h1 {
-	background-color: #000;
-	color: #fff;
+	background-color: black;
 	font-size: 48px;
 }
 h3 {
 	font-size: 24px;
-	color: white;
 }
-p {
-	color: white;
+ul{
+	padding: 10px;
+	background:rgba(0,0,0,0.5);
+}
+li{
+	display: inline;
+	padding: 0px 10px 0px 10px;
 }
