--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -12,10 +12,6 @@ header {
 	text-align: center;
 }
 
-h1{
-	font-size: 96px;
-}
-
 nav {
 	background:rgba(0,0,0,0.5);
 }
@@ -27,17 +23,20 @@ nav a {
 	font-size: 24px;
 }
 
-article{
+h1{
+	font-family: 'Amatic SC', cursive;
+	font-size: 36px;
+}
+
+h2{
+	font-family: 'Amatic SC', cursive;
+	font-size: 18px;
+}
+
+p{
 	font-family:'Karla', sans-serif;
 }
 
 footer{
 	text-align:center;
-}
-
-#intro {
-	text-align: center;
-	font-family: 'Amatic SC', cursive
-	color: black;
-	padding: 8em 0;
 }
