should be final

--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -6,7 +6,11 @@ font-family: Shorthalt Thin;
 src: url(fonts/Shorthalt_thin);
 }
 
-#logotitle {
+header{
+	text-align:center;
+}
+
+header h1{
 	font-family: Shorthalt Thin, cursive, sans-serif;
 	color: black;
 	text-align: center;
@@ -24,9 +28,9 @@ nav a {
 	font-size: 24px;
 }
 
-h1{
+#intro h1{
 	font-family: 'Amatic SC', cursive;
-	font-size: 24px;
+	font-size: 48px;
 }
 
 #intro {
@@ -35,20 +39,22 @@ h1{
 	padding: 8em 0;
 }
 
-h2{
+#featured {
+	font-family:'Karla', sans-serif;
+	font-size:14px;
+}
+
+#featured h2{
 	font-family: 'Amatic SC', cursive;
-	font-size: 24px;
+	font-size: 48px;
 }
 
-h3{
-	font-family:'Karla', sans-serif;
-	font-size:18px;
-}
-
-p{
-	font-family:'Karla', sans-serif;
+#featured h3{
+	font-size:16px;
+	font-style:italic;
 }
 
 footer{
 	text-align:center;
+	font-family:'Karla', sans-serif;
 }
