--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -1,20 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 @import url('https://fonts.googleapis.com/css?family=Karla');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
 * { margin:0; padding:0; box-sizing:border-box; }
-@font-face {
-font-family: Shorthalt Thin;
-src: url(fonts/Shorthalt_thin);
-}
+
 
 #wrapper{
+	background-color:rgb(255, 230, 255);
 	width: 960px;
 }
 
 header{
 	text-align:center;
 }
-header img{
-	align-content: center;
+header h1{
+	font-family: 'Clicker+Script';
 	padding: 1em;
 }
 
@@ -28,10 +27,11 @@ nav a {
 	font-family: 'Amatic SC', cursive;
 	font-size: 24px;
 	color: white;
+	text-align: center;
 }
 
 .picture {
-	padding: 1em;
+	padding: .5em;
 	margin: 0 auto;
 }
 
