--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -13,7 +13,7 @@ header{
 	text-align:center;
 }
 header h1{
-	font-family: 'Clicker+Script';
+	font-family: 'Clicker Script', cursive;
 	padding: 1em;
 }
 
