--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -7,6 +7,7 @@
 #wrapper{
 	background-color:rgb(255, 230, 255);
 	width: 960px;
+	margin: 0, auto;
 }
 
 header{
@@ -32,7 +33,7 @@ nav a {
 
 .picture {
 	padding: .5em;
-	margin: 0 auto;
+	margin: 18px;
 }
 
 #intro h1{
@@ -46,13 +47,13 @@ nav a {
 #intro {
 	font-family: 'Karla', sans-serif;
 	padding: 8em 0;
-	margin: 0 auto;
+	margin: 18px;
 }
 
 #featured {
 	font-family:'Karla', sans-serif;
 	font-size:14px;
-	margin:0 auto;
+	margin:18px;
 }
 
 #featured h2{
