--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -5,16 +5,13 @@ header{
 	align-content:center;
 }
 
-nav {
-	background:rgba(0,153,153,0.5);
-}
-
 nav a {
 	float: left;
 	padding: 0 1em;
 	font-family: 'Amatic SC', sans-serif;
 	font-size: 24px;
 	color: white;
+	background:rgba(0,153,153,0.5);
 	text-align: center;
 }
 
@@ -46,13 +43,17 @@ h2{
 	font-family: 'Amatic SC', cursive;
 	font-size: 48px;
 	padding:.5em;
-
 }
 
 h3{
 	font-size:16px;
 	font-style:italic;
 	padding-bottom:.5em;
+}
+
+a{
+	text-align:center;
+	font-family:'Karla', sans-serif;
 }
 
 footer{
