--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -6,13 +6,16 @@ header{
 }
 
 nav a {
+	display; block;
 	float: left;
-	padding: 0 1em;
+	padding: 20px;
+	margin: 48px;
 	font-family: 'Amatic SC', sans-serif;
 	font-size: 24px;
 	color: white;
 	background:rgba(0,153,153,0.5);
 	text-align: center;
+	text-decoration: none;
 }
 
 #intro h1{
@@ -29,32 +32,33 @@ nav a {
 	margin: 36px;
 }
 
-.p {
+p {
 	font-family:'Karla', sans-serif;
 	font-size:14px;
 	margin:36px;
 }
 
-.h2{
+h2{
 	font-family: 'Amatic SC', cursive;
 	font-size: 36px;
 	padding:.5em;
 }
 
-.h3{
+h3{
 	font-size:16px;
 	font-style:italic;
 	padding-bottom:.5em;
 }
 
-.a{
+a{
 	text-align:center;
 	font-family:'Karla', sans-serif;
 }
 
-#recentblogs{
+.column{
 	float:left;
-	padding:12px;
+	width:300px;
+	padding: 20px;
 }
 
 footer{
