--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -35,7 +35,6 @@ nav a {
 p {
 	font-family:'Karla', sans-serif;
 	font-size:14px;
-	margin:36px;
 }
 
 h2{
@@ -59,6 +58,12 @@ a{
 	float:left;
 	width:300px;
 	padding: 20px;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 footer{
