--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -14,8 +14,7 @@ header h1{
 }
 
 nav a {
-	display; block;
-	float: left;
+	display; inline block;
 	padding: 20px;
 	margin: 48px;
 	font-family: 'Amatic SC', sans-serif;
@@ -62,19 +61,24 @@ a{
 	font-family:'Karla', sans-serif;
 }
 
-.column{
+.three_column{
 	float:left;
-	width:300px;
+	border:1px solid black;
+	width:30%;
 	padding: 20px;
 }
 
-.clearfix::after {
-    content: "";
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
     clear: both;
-    display: table;
+    height: 0;
 }
 
 footer{
+	background:rgba(0,153,153,0.5);
 	text-align:center;
 	font-family:'Karla', sans-serif;
 }
