--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -61,9 +61,24 @@ a{
 	font-family:'Karla', sans-serif;
 }
 
-.three_column{
+#three_column{
+	border:1px rgba(0,153,153,0.5);
+}
+
+#left{
 	float:left;
-	border:1px solid black;
+	width:30%;
+	padding: 20px;
+}
+
+#center{
+	float:left;
+	width:30%;
+	padding: 20px;
+}
+
+#right{
+	float:left;
 	width:30%;
 	padding: 20px;
 }
@@ -81,4 +96,5 @@ footer{
 	background:rgba(0,153,153,0.5);
 	text-align:center;
 	font-family:'Karla', sans-serif;
+	padding:36px;
 }
