--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -49,7 +49,15 @@ a{
 	font-family:'Karla', sans-serif;
 }
 
+#featured h1{
+	text-align:center;
+	font-family: 'Amatic SC', sans-serif;
+	font-size: 48px;
+	border-bottom: 2px solid black;
+}
+
 #featured img{
+	border-radius: 8px;
 	float:left;
 	width:50%;
 }
@@ -57,13 +65,6 @@ a{
 #featured article{
 	float:left;
 	width:50%;
-}
-
-#featured h1{
-	text-align:center;
-	font-family: 'Amatic SC', sans-serif;
-	font-size: 48px;
-	border-bottom: 2px solid black;
 }
 
 .clearfix:after {
