--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -11,6 +11,12 @@ header h1{
 	font-family:'Shorthalt', sans-serif;
 	text-align:center;
 	font-size: 96px;
+	padding:1em;
+}
+
+nav{
+	padding:1em;
+	text-align:center;
 }
 
 nav a {
