--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -11,11 +11,11 @@ header h1{
 	font-family:'Shorthalt', sans-serif;
 	text-align:center;
 	font-size: 96px;
-	padding:1em;
+	padding:18px;
 }
 
 nav{
-	padding:1em;
+	padding-bottom:1em;
 	text-align:center;
 }
 
