--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -11,17 +11,17 @@ header h1{
 	font-family:'Shorthalt', sans-serif;
 	text-align:center;
 	font-size: 96px;
-	padding:18px;
+	padding:24px;
 }
 
 nav{
-	padding-bottom:1em;
+	padding-bottom:24px;
 	text-align:center;
 }
 
 nav a {
 	display; inline block;
-	padding: 20px;
+	padding-top: (14px 48px 14px 28px)
 	margin: 48px;
 	font-family: 'Amatic SC', sans-serif;
 	font-size: 24px;
@@ -60,17 +60,20 @@ a{
 	font-family: 'Amatic SC', sans-serif;
 	font-size: 48px;
 	border-bottom: 2px solid black;
+	padding:20px;
 }
 
 #featured img{
 	border-radius: 8px;
 	float:left;
-	width:50%;
+	max-width:50%;
+	padding:20px;
 }
 
 #featured article{
 	float:left;
 	width:50%;
+	padding:24px;
 }
 
 .clearfix:after {
@@ -86,14 +89,14 @@ a{
 	float:left;
 	width:30%;
 	padding: 20px;
-	border-right: 1px rgba(0,153,153,0.5);
+	border-right: 1px solid rgb(0,153,153);
 }
 
 #center{
 	float:left;
 	width:30%;
 	padding: 20px;
-	border-right: 1px rgba(0,153,153,0.5)
+	border-right: 1px solid rgb(0,153,153);
 }
 
 #right{
