--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -21,7 +21,7 @@ nav{
 
 nav a {
 	display; inline block;
-	padding-top: (14px 48px 14px 28px)
+	padding: 14px 48px 14px 8px;
 	margin: 48px;
 	font-family: 'Amatic SC', sans-serif;
 	font-size: 24px;
