--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -21,14 +21,17 @@ nav{
 
 nav a {
 	display; inline block;
-	padding: 14px 48px 14px 8px;
-	margin: 48px;
+	padding: 2em
 	font-family: 'Amatic SC', sans-serif;
 	font-size: 24px;
 	color: white;
 	background:rgba(0,153,153,0.5);
 	text-align: center;
 	text-decoration: none;
+}
+
+nav a:hover{
+	background color:rgb(0,153,153);
 }
 
 p {
@@ -109,5 +112,5 @@ footer{
 	background:rgba(0,153,153,0.5);
 	text-align:center;
 	font-family:'Karla', sans-serif;
-	padding:36px;
+	padding:24px;
 }
