--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -22,6 +22,7 @@ nav{
 nav a {
 	display; inline block;
 	padding: 2em
+	width:100px;
 	font-family: 'Amatic SC', sans-serif;
 	font-size: 24px;
 	color: white;
